--- a/primeiro-projeto/src/app/cursos/cursos.component.html
+++ b/primeiro-projeto/src/app/cursos/cursos.component.html
@@ -1,2 +1,6 @@
-<p>cursos works!</p>
+<p>Lista de Curso do Portal - {{ nomePortal }}</p>
 <app-curso-detalhe></app-curso-detalhe>
+
+<ul>
+  <li *ngFor="let curso of cursos">{{ curso }}</li>
+</ul>
